src/test/ui/mismatched_types/E0631.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/E0631.rs:7:5
   |
LL |     foo(|_: isize| {});
   |     ^^^ ---------- found signature of `fn(isize) -> _`
   |     |
   |     expected signature of `fn(usize) -> _`
   |
note: required by a bound in `foo`
  --> $DIR/E0631.rs:3:11
   |
LL | fn foo<F: Fn(usize)>(_: F) {}
   |           ^^^^^^^^^ required by this bound in `foo`

error[E0308]: mismatched types
  --> $DIR/E0631.rs:8:5
   |
LL |     bar(|_: isize| {});
   |     ^^^ types differ
   |
   = note: expected trait `Fn<usize>`
              found trait `Fn<(isize,)>`
note: required by a bound in `bar`
  --> $DIR/E0631.rs:4:11
   |
LL | fn bar<F: Fn<usize>>(_: F) {}
   |           ^^^^^^^^^ required by this bound in `bar`

error[E0631]: type mismatch in function arguments
  --> $DIR/E0631.rs:9:9
   |
LL |     fn f(_: u64) {}
   |     ------------ found signature of `fn(u64) -> _`
...
LL |     foo(f);
   |     --- ^ expected signature of `fn(usize) -> _`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `foo`
  --> $DIR/E0631.rs:3:11
   |
LL | fn foo<F: Fn(usize)>(_: F) {}
   |           ^^^^^^^^^ required by this bound in `foo`

error[E0308]: mismatched types
  --> $DIR/E0631.rs:10:9
   |
LL |     bar(f);
   |     --- ^ types differ
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected trait `Fn<usize>`
              found trait `Fn<(u64,)>`
note: required by a bound in `bar`
  --> $DIR/E0631.rs:4:11
   |
LL | fn bar<F: Fn<usize>>(_: F) {}
   |           ^^^^^^^^^ required by this bound in `bar`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0308, E0631.
For more information about an error, try `rustc --explain E0308`.
